[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dixoncoles"
version = "0.1.0"
description = "Dixon-Coles soccer model: time-weighted MLE + match-outcome / score prediction."
authors = [{name = "superkush06"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["dc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "E702"]
